fix title, utitle wrap

--- a/src/typography/title.scss
+++ b/src/typography/title.scss
@@ -3,6 +3,8 @@
   font-family: $font-family-heading;
   font-weight: $font-weight-bold;
   line-height: 1.22;
+  // to wrap by `\n`
+  white-space: pre-wrap;
 }
 
 .t-title-2xs {
