--- a/src/typography/utitle.scss
+++ b/src/typography/utitle.scss
@@ -2,6 +2,8 @@
 [class*='t-utitle-'] {
   font-weight: $font-weight-bold;
   letter-spacing: 2.5px;
+  // to wrap by `\n`
+  white-space: pre-wrap;
 }
 
 .t-utitle-xs {
